Rework NativeLibrary to extract the libs into an MD5 hash directory (#157)
* Extracted the native library into <temp>/com.couchbase.lite.java/native/<md5>.
* The md5 hash is an MD5 of the combined MD5 hash of all native libraries to be extracted.
* Fix per code review